syntax = "proto3";

package poktroll.session;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "poktroll/session/params.proto";

option go_package = "github.com/pokt-network/poktroll/x/session/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/pokt-network/poktroll/session/params";
  
  }
  
  // Queries a list of GetSession items.
  rpc GetSession (QueryGetSessionRequest) returns (QueryGetSessionResponse) {
    option (google.api.http).get = "/pokt-network/poktroll/session/get_session/{applicationAddress}/{serviceId}/{blockHeight}";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetSessionRequest {
  string applicationAddress = 1;
  string serviceId          = 2;
  string blockHeight        = 3;
}

message QueryGetSessionResponse {}

